syntax = "proto3";
package skopa.core;

import "common.proto";

service UserAdminService {
  rpc GetUserById (common.IdRequest) returns (common.NullableUser);
  rpc GetUserList (UserListArgument) returns (UserList);
}

message UserBase {
  uint32 id = 1;
  string email = 2;
  string country_code = 3;
  optional string phone = 4;
  string status = 5;
  optional string email_verified_at = 6;
  string created_at = 8;
  string updated_at = 9;
  string source = 10;
}

message UserList {
  repeated UserBase users = 1;
  uint32 total = 2;
}

message UserListArgument {
  string pagination_params = 1;
}
